objects/Test_Step_Execution__c.object
<CustomObject>
    <description>Test Step Execution contains brief details on Test Step and the details of the tester who tested the particular Test Step.</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <description>Actual result obtained after executing the Test Step</description>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the tester can not proceed forward with testing they mark this field as blocked</description>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_TSE__c</fullName>
        <defaultValue>&quot;Not Yet Executed&quot;</defaultValue>
        <description>Status of the test step if it is passed failed or not yet executed</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Executed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Test Step Execution to know if it  is pass or fail</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Case_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case Execution</label>
        <referenceTo>Test_Case_Execution__c</referenceTo>
        <relationshipLabel>Test Step Executions</relationshipLabel>
        <relationshipName>Test_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Step</label>
        <referenceTo>Test_Step__c</referenceTo>
        <relationshipLabel>Test Step Executions</relationshipLabel>
        <relationshipName>Test_Step_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Step Execution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Case_Execution__c</field>
            <operation>equals</operation>
            <value>TCE-0083</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TSE-{0000}</displayFormat>
        <label>Test Step Execution Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Step Executions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>